Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33229

QTextCodec interprets non-character Unicode code points as invalid

XMLWordPrintable

    • f3dfb372534ebe6553439ee8bfa62e94ab200889

      QTextCodec interprets non-character Unicode points as invalid.
      Strictly speaking, UTF-xx encodings are reversible. That means, that the 66 non-character codes (including U+FFFE and U+FFFF), are valid UTF-8, and hence are perfectly acceptable within UTF-8 text messages.
      According to the Unicode standard, they SHOULD NOT be used in information interchange, but a recent corrigendum clarifies that non-characters CAN be exchanged (see http://www.unicode.org/versions/corrigendum9.html)

        For Gerrit Dashboard: QTBUG-33229
        # Subject Branch Project Status CR V

            laknoll Lars Knoll
            kurt.pattyn Kurt Pattyn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes