tests/auto/corelib/codecs/utf8/utf8data.cpp
@@ -468,8 +468,8 @@ name|void
 name|loadNonCharactersRows
 parameter_list|()
 block|{
-comment|// Unicode has a couple of "non-characters" that one can use internally,
-comment|// but are not allowed to be used for text interchange.
+comment|// Unicode has a couple of "non-characters" that one can use internally
+comment|// These characters are allowed for text-interchange (see http://www.unicode.org/versions/corrigendum9.html)
 comment|//
 comment|// Those are the last two entries each Unicode Plane (U+FFFE, U+FFFF,
 comment|// U+1FFFE, U+1FFFF, etc.) as well as the entries between U+FDD0 and
