tests/auto/corelib/json/tst_qtjson.cpp
@@ -61,4 +61,5 @@ DECL|function|validation
 DECL|function|valueEquals
 DECL|macro|INVALID_UNICODE
 DECL|macro|UNICODE_DJE
+DECL|macro|UNICODE_NON_CHARACTER
 DECL|member|testDataDir
